<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabiana.trabalhop1.TelaCadastro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <TextView
                android:text="@string/tarefa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTarefa"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textStyle="normal|bold"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="56dp"
            android:layout_height="370dp"
            android:layout_alignParentLeft="true">

            <Spinner
                android:layout_width="match_parent"
                android:id="@+id/spinnerCurso"
                android:entries="@array/lista_curso"
                android:layout_height="40dp"
                android:spinnerMode="dropdown" />

            <Spinner
                android:layout_width="match_parent"
                android:id="@+id/spinnerAula"
                android:entries="@array/lista_aula"
                android:layout_height="40dp"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/exercicio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewExercicio"
                    android:layout_weight="1"
                    android:fontFamily="NORMAL"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxExec"
                    android:gravity="center"
                    android:checked="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:text="@string/laboratorio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLaboratorio"
                    android:layout_weight="1"
                    android:fontFamily="NORMAL"
                    android:gravity="center" />

                <CheckBox
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxLab"
                    android:gravity="center"
                    android:checked="false" />

            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:id="@+id/progressBarTarefa"
                android:layout_height="40dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="20" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:text="@string/btProgresso"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/bt_Progresso"
                    android:width="1dp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/btCadastro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_Cadastro"
                    android:width="1dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:text="@string/btSair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_Sair"
                    android:width="1dp"
                    android:layout_weight="1"/>
            </TableRow>

        </TableLayout>

    </RelativeLayout>
</RelativeLayout>
